--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,10 @@ jobs:
   - name: Create a tag deploy to nexus run updatebot
     stage: tag_deploy_updatebot
     script: |
-      mvn versions:set -DnewVersion=$(cat VERSION)
+      mvn versions:set -DnewVersion=$(cat VERSION) -DprocessAllModules=true -DgenerateBackupPoms=false 
       git add --all
       git commit -m "Release $(cat VERSION)" --allow-empty
       git tag -fa v$(cat VERSION) -m "Release version $(cat VERSION)"
       git push -f -q https://${GITHUB_TOKEN}@github.com/Activiti/Activiti.git v$(cat VERSION)
-      mvn versions:set -DnewVersion=$(cat VERSION)
       mvn clean deploy -DskipTests
       export VERSION=$(cat VERSION)| make updatebot/push-version
