--- a/activiti-core/pom.xml
+++ b/activiti-core/pom.xml
@@ -12,25 +12,19 @@
   <packaging>pom</packaging>
   <name>Activiti :: Core :: Parent</name>
   <properties>
-    <batik.version>1.12</batik.version>
+    <batik.version>1.13</batik.version>
+    <checkstyle-maven-plugin.version>3.1.0</checkstyle-maven-plugin.version>
     <commons-email.version>1.5</commons-email.version>
-    <el-api.version>2.2</el-api.version>
-    <geronimo.version>1.1.1</geronimo.version>
+    <jakarta-enterprise-concurrent.version>1.1.2</jakarta-enterprise-concurrent.version>
     <java-uuid-generator.version>4.0.1</java-uuid-generator.version>
     <javaGeom.version>0.11.1</javaGeom.version>
-    <javax.enterprise.concurrent-api.version>1.0</javax.enterprise.concurrent-api.version>
-    <jaxb-api.version>2.3.1</jaxb-api.version>
     <jgraphx.version>3.9.8.1</jgraphx.version>
+    <joda-time.version>2.10.6</joda-time.version>
     <json-unit.version>1.24.0</json-unit.version>
-    <jsr250-api.version>1.0</jsr250-api.version>
     <juel.version>2.2.7</juel.version>
-    <hibernate-jpa-2.1-api.version>1.0.2.Final</hibernate-jpa-2.1-api.version>
     <mybatis.version>3.5.0</mybatis.version>
     <subethasmtp-wiser.version>1.2</subethasmtp-wiser.version>
     <xmlgraphics-commons.version>2.2</xmlgraphics-commons.version>
-    <subethasmtp-wiser.version>1.2</subethasmtp-wiser.version>
-    <xmlgraphics-commons.version>2.2</xmlgraphics-commons.version>
-    <checkstyle-maven-plugin.version>3.1.0</checkstyle-maven-plugin.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -49,20 +43,9 @@
         <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>javax.el</groupId>
-        <artifactId>el-api</artifactId>
-        <version>${el-api.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.hibernate.javax.persistence</groupId>
-        <artifactId>hibernate-jpa-2.1-api</artifactId>
-        <version>${hibernate-jpa-2.1-api.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.enterprise.concurrent</groupId>
-        <artifactId>javax.enterprise.concurrent-api</artifactId>
-        <version>${javax.enterprise.concurrent-api.version}</version>
-        <scope>provided</scope>
+        <groupId>jakarta.enterprise.concurrent</groupId>
+        <artifactId>jakarta.enterprise.concurrent-api</artifactId>
+        <version>${jakarta-enterprise-concurrent.version}</version>
       </dependency>
       <dependency>
         <groupId>de.odysseus.juel</groupId>
@@ -85,11 +68,6 @@
         <version>${commons-email.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-jta_1.1_spec</artifactId>
-        <version>${geronimo.version}</version>
-      </dependency>
-      <dependency>
         <groupId>org.mybatis</groupId>
         <artifactId>mybatis</artifactId>
         <version>${mybatis.version}</version>
@@ -108,11 +86,6 @@
         <groupId>com.github.vlsi.mxgraph</groupId>
         <artifactId>jgraphx</artifactId>
         <version>${jgraphx.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.annotation</groupId>
-        <artifactId>jsr250-api</artifactId>
-        <version>${jsr250-api.version}</version>
       </dependency>
       <!-- batik -->
       <dependency>
@@ -178,9 +151,9 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>javax.xml.bind</groupId>
-        <artifactId>jaxb-api</artifactId>
-        <version>${jaxb-api.version}</version>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>${joda-time.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
