fix: resolve review comments

--- a/activiti-core/activiti-api-impl/activiti-api-process-model-impl/pom.xml
+++ b/activiti-core/activiti-api-impl/activiti-api-process-model-impl/pom.xml
@@ -45,6 +45,11 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-logging</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
