manage all batik deps in core

--- a/activiti-core/pom.xml
+++ b/activiti-core/pom.xml
@@ -116,21 +116,28 @@
       </dependency>
       <dependency>
         <groupId>org.apache.xmlgraphics</groupId>
+        <artifactId>batik-transcoder</artifactId>
+        <version>${batik.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.xmlgraphics</groupId>
+        <artifactId>batik-codec</artifactId>
+        <version>${batik.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-svg-dom</artifactId>
         <version>${batik.version}</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-anim</artifactId>
         <version>${batik.version}</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-parser</artifactId>
         <version>${batik.version}</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>net.javacrumbs.json-unit</groupId>
