Use Graviton 2 and LXD for build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-import: Activiti/activiti-scripts:.travis.java.yml@master
+import: Activiti/activiti-scripts:.travis.java.yml@dev-elias-graviton2
 stages:
 - name: verify
 - name: tag_deploy_updatebot
