--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 import: Activiti/activiti-scripts:.travis.java.yml@master
 stages:
 - name: verify
+- name: deploy_preview
+  if: type = pull_request
 - name: tag_deploy_updatebot
   if: type != pull_request
 jobs:
@@ -9,6 +11,11 @@ jobs:
     stage: verify
     script:
     - mvn verify -B
+  - name: Deploy Preview
+    stage: deploy_preview
+    script: |
+      mvn versions:set -DnewVersion=$(cat VERSION) -DprocessAllModules=true -DgenerateBackupPoms=false  || travis_terminate 1
+      mvn clean deploy -DskipTests || travis_terminate 1
   - name: Create a tag deploy to nexus run updatebot
     stage: tag_deploy_updatebot
     script: "mvn versions:set -DnewVersion=$(cat VERSION) -DprocessAllModules=true
