fix: add SNAPSHOT qualifier to preview version

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
   - name: Deploy Preview
     stage: deploy_preview
     script: |
-      mvn versions:set -DnewVersion=$(cat VERSION) -DprocessAllModules=true -DgenerateBackupPoms=false  || travis_terminate 1
+      mvn versions:set -DnewVersion=$(cat VERSION)-SNAPSHOT -DprocessAllModules=true -DgenerateBackupPoms=false  || travis_terminate 1
       mvn clean deploy -DskipTests || travis_terminate 1
   - name: Create a tag deploy to nexus run updatebot
     stage: tag_deploy_updatebot
