Build preview only if branch name has `preview` suffix
There is no need to build preview on all the PRs as it increases the build time

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ import: Activiti/activiti-scripts:.travis.java.yml@master
 stages:
 - name: verify
 - name: deploy_preview
-  if: type = pull_request
+  if: type = pull_request  AND head_branch =~ ^.*preview$"
 - name: tag_deploy_updatebot
   if: type != pull_request
 jobs:
