fix(GH-3299): Upgrade Activiti to Spring Boot 2.4.1 (#3505)
* fix: update Spring Boot version to 2.4.1

* build: deploy preview versions to Nexus

* fix: add SNAPSHOT qualifier to preview version

* Build preview only if branch name has `preview` suffix

There is no need to build preview on all the PRs as it increases the build time

* Fix condition

* Remove extra space

Co-authored-by: Elias Ricken de Medeiros <26007058+erdemedeiros@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ import:
   - source: Activiti/activiti-scripts:.travis.maven_cache_repo_no_snapshots.yml@master
 stages:
 - name: verify
+- name: deploy_preview
+  if: type = pull_request AND head_branch =~ ^.*preview$
 - name: tag_deploy_updatebot
   if: type != pull_request
 jobs:
@@ -11,6 +13,11 @@ jobs:
     stage: verify
     script:
     - mvn verify -B
+  - name: Deploy Preview
+    stage: deploy_preview
+    script: |
+      mvn versions:set -DnewVersion=$(cat VERSION)-SNAPSHOT -DprocessAllModules=true -DgenerateBackupPoms=false  || travis_terminate 1
+      mvn clean deploy -DskipTests || travis_terminate 1
   - name: Create a tag deploy to nexus run updatebot
     stage: tag_deploy_updatebot
     script: |
