--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,24 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
 # Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the develop branch
+  # Triggers the workflow on push or pull request events but only for the default branch
   push:
-    branches: [ develop ]
+    branches: [ $default-branch ]
   pull_request:
-    branches: [ develop ]
+    branches: [ $default-branch ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-18.04
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  build:
+    runs-on: ubuntu-18.04
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - name: Setup Java JDK 11
         uses: actions/setup-java@v1
@@ -42,3 +37,84 @@ jobs:
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
+
+  deploy:
+    runs-on: ubuntu-18.04
+    needs: build
+    if: github.event_name != 'pull_request' || contains(github.head_ref, 'preview')
+    steps:
+
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Java JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      - name: Add tool dir
+        run: >-
+          mkdir $HOME/bin
+          echo "$HOME/bin" >> $GITHUB_PATH
+
+      - name: Install jx-release-version
+        run: >-
+          curl -fsSL https://github.com/jenkins-x/jx-release-version/releases/download/v$JX_RELEASE_VERSION/jx-release-version-linux-amd64.tar.gz \
+            | tar xz -C $HOME/bin jx-release-version
+        env:
+          JX_RELEASE_VERSION: 2.2.3
+
+      - name: Bump branch version
+        if: github.event_name != 'pull_request'
+        run: >-
+          echo $(jx-release-version) > VERSION
+
+      - name: Set preview version
+        if: github.event_name == 'pull_request'
+        run: >-
+          echo 0.0.1-${GITHUB_REF#refs/heads/}-$GITHUB_RUN_NUMBER > VERSION
+
+      - name: Set VERSION env variable
+        run: echo "VERSION}=$(cat VERSION)" >> $GITHUB_ENV
+
+      - name: Deploy with Maven
+        run: >-
+          mvn -s settings.xml versions:set -DnewVersion=$VERSION -DprocessAllModules=true -DgenerateBackupPoms=false
+          mvn deploy -DskipTests
+        env:
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+
+      - name: Create release tag
+        run: >-
+          git commit -am "Release $VERSION" --allow-empty
+          git tag -fa v$VERSION -m "Release version $VERSION"
+          git push -f -q https://$GITHUB_TOKEN@github.com/Activiti/Activiti.git v$VERSION
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install updatebot
+        run: >-
+          curl -fsSLo $HOME/bin/updatebot.jar \
+            https://repo1.maven.org/maven2/io/jenkins/updatebot/updatebot/$UPDATEBOT_VERSION/updatebot-$UPDATEBOT_VERSION.jar
+          echo "java -jar $HOME/bin/updatebot.jar \$@" > $HOME/bin/updatebot
+          chmod +x $HOME/bin/updatebot
+        env:
+          UPDATEBOT_VERSION: 1.1.62
+
+      - name: Run updatebot
+        run: >-
+          updatebot push-version --kind maven \
+            org.activiti:activiti-dependencies $VERSION \
+            org.activiti:activiti-api-dependencies $VERSION \
+            org.activiti:activiti-core-dependencies $VERSION \
+            org.activiti:activiti-core-common-dependencies $VERSION
+        env:
+          UPDATEBOT_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
