--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,9 @@ jobs:
 
       - name: Set preview version
         if: ${{ contains(github.head_ref, 'migrate-ci-to-github-actions') }}
-        run: echo 0.0.1-${${GITHUB_HEAD_REF#refs/heads/}/\//_}-${GITHUB_RUN_NUMBER}-SNAPSHOT > VERSION
+        run: |-
+          BRANCH_NAME=${GITHUB_HEAD_REF#refs/heads/}
+          echo 0.0.1-${BRANCH_NAME/\//-}-${GITHUB_RUN_NUMBER}-SNAPSHOT > VERSION
 
       - name: Set VERSION env variable
         run: echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
