--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
         run: echo $(jx-release-version) > VERSION
 
       - name: Set preview version
-        if: ${{ contains(github.head_ref, 'migrate-ci-to-github-actions') }}
+        if: ${{ contains(github.head_ref, 'preview') }}
         run: |
           BRANCH_NAME=${GITHUB_HEAD_REF#refs/heads/}
           echo 0.0.1-${BRANCH_NAME/\//-}-${GITHUB_RUN_NUMBER}-SNAPSHOT > VERSION
@@ -75,7 +75,7 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Deploy with Maven
-        if: ${{ github.event_name != 'pull_request' || contains(github.head_ref, 'migrate-ci-to-github-actions') }}
+        if: ${{ github.event_name != 'pull_request' || contains(github.head_ref, 'preview') }}
         run: |
           mvn -B versions:set -DnewVersion=$VERSION -DprocessAllModules=true -DgenerateBackupPoms=false
           mvn -B -s settings.xml deploy -DskipTests
