--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,7 +2,7 @@ pull_request_rules:
   - name: automatic merge with strict
     conditions:
       - author=alfresco-build-user
-      - status-success=CI / build (pull_request)
+      - status-success=build
       - label!=do-not-merge
     actions:
       merge:
@@ -13,7 +13,7 @@ pull_request_rules:
       - "#approved-reviews-by>=1"
       - "#review-requested=0"
       - "#changes-requested-reviews-by=0"
-      - status-success=CI / build (pull_request)
+      - status-success=build
       - status-success=license/cla
       - label!=do-not-merge
     actions:
